Split Edit parking into two seperate pages {Edit Parking Lots and Edit Parking Spaces}. 	Currently Developing Edit Parking Lots. I have implemented Skeleton Structure for the page need to have the code behind and logic for checking if the boundries are correct and inserting them into the database.

--- a/SDD2012Website/StyleSheets/adminStyle.css
+++ b/SDD2012Website/StyleSheets/adminStyle.css
@@ -1,6 +1,7 @@
 body
 {
-	background-image: url('../Images/greyMetalBackground.jpg');
+	background-color: 	#A9A9A9;
+	//background-image: url('../Images/greyMetalBackground.jpg');
 	background-position:center;
 	
 }
@@ -44,23 +45,40 @@ body
 	display:inline-block;
 	text-align:left;	
 }
-#preEditTable
+#preEditTableUsers
 {
 	border-style:ridge;
 	border-width:2px;
 	border-color:white;
 	
 }
-#editTable
+#editTableUsers
 {
 	border-style:ridge;
 	border-width:2px;
 	border-color:white;
 	
 }
-tr,td
+#preEditTableLots
 {
 	border-style:ridge;
 	border-width:2px;
-	border-color:white;	
+	border-color:white;
+	font: 14px times;
+	
+}
+#editTableLots
+{
+	border-style:ridge;
+	border-width:2px;
+	border-color:white;
+	font: 14px times;
+	
+}
+tr, td
+{
+	border-style:ridge;
+	border-width:2px;
+	border-color:white;
+		
 }
